# LEO-Hybrid-PGRL

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  WORLD_SCIENCE_VS_US.md  WORLD_SCIENCE_VS_US__benchmark.py  get_sp3.sh  main.py  pyproject.toml
configs/: online_grpo.yaml  pretrain.yaml  validate.yaml
controller/: __init__.py  base_controller.py  doppler_precomp.py  energy_model.py  guard_band_policy.py  pgrl_output_schema.py  tx_timing_policy.py
data/: README.md  dataset.py  f7_real_data.npz  real_training_data.npz  registry.yaml  tdma_schedule_f5.csv
docs/: FINAL_REPORT.md  MAC_DEPLOYMENT_GUIDE.md  THE_D2S_REVOLUTION.md  artifact_manifest.md  automated_hardware_experiment_runner.md  globecom_scope.md  hardware_claim_checklist.md  hardware_iq_capture_stage5_results.txt  hardware_photo_instructions.md  implementation_plan.md  lr1121_lrfhss_signal_detection.md  lr1121_rx_firmware_gap.md  lr1121_sdr_validation_workflow.md  lrfhss_sdr_decoder_feasibility.md  mac_m2_hardware_setup.md  ota_iq_validation_scope.md  packet_delivery_validation_plan.md  real_hardware_connection_checklist.md  real_hardware_per_experiment_plan.md  risk_aware_control_stage4_results.txt  run_real_hardware_per_experiment.md  supervisor_review.md  swdm001_auto_tx_mode.md  task.md  thesis_extension.md  two_board_lr1121_bringup.md  uncertainty_head_stage3e_results.txt  uncertainty_redesign_experiment_plan.md  uncertainty_redesign_final_summary.txt  uncertainty_temperature_stage3f_results.txt  walkthrough.md
experiments/: generate_figures.py  summary_table.py
hardware/: build-linux-mac.Dockerfile  hardware_artifact_manifest.json  hwil_impairment_extraction.py
logs/: claude_autonomous_complete.ok
models/: grpo_agent.py  pinn_core.py
paper/: globecom_main.tex  icc_main.tex  refs.bib
payload_results_realizations/: benchmark_results.txt  (+1 more)
(+396 files in other folders)
