[project]
name = "pinn-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "sgp4>=2.25",
    "torch>=2.6.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "astropy>=7.0.0",
    "h5py>=3.13.0",
    "gymnasium>=1.2.3",
    "stable-baselines3[extra]>=2.8.0a2",
    "shimmy>=2.0.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/cu126"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
