[project]
name = "pgrl-lrfhss-d2s"
version = "0.1.0"
description = "Uncertainty-aware PGRL-assisted LR-FHSS uplink control for direct-to-satellite IoT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hydra-core>=1.3.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "controller",
    "physics_ml",
    "semtech_validation",
    "sdr_hwil",
    "scripts",
]

[dependency-groups]
dev = []

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
